Changes on the text and adding some figures.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,21 +1,22 @@
-@manual{inmetro2003,
-	Author = {INMETRO},
-	Title = {Vocabulário internacional de termos fundamentais e gerais de
-	metrologia},
-	Year = {2013},
-	Address = {Rio de Janeiro, Brasil},
-	Pages = {75},
-	isbn = {85-87090-90-9},
+@book{vauldenay,
+	Author = {Serge Vaudenay},
+	Title = {A Classical Introduction To Cryptography, Applications for Communications Security
+},
+	Year = {2006},
 }
 
-@inproceedings{soviero1997,
-	Author = {P. A. O. Soviero and L. G. M. Lavagna},
-	Title = {A Numerical Model for Thin Airfoils in Unsteady Motion},
-	Year = {1997},
-	Pages = {332-340},
-	Volume = {19},
-	Number = {3},
-	Booktitle = {Journal of the Brazilian Societyt Mechanical Sciences},	
+@article{alex-biryukov,
+  title = {Block Ciphers and Stream Ciphers: The State of the Art},
+  author = {Alex Biryukov},
+  address = {Katholieke Universiteit Leuven}
+}
+
+
+@article{majid-mohd,
+	Author = {Majid Bakhtiari and Mohd Aizaini Maaref},
+	Title = {An Efficient Stream Cipher Algorithm for Data Encryption},
+	Year = {2011},
+	address = {University Technology Malaysia},
 }
 
 @inproceedings{sparrow1980,
@@ -28,11 +29,10 @@
 	Booktitle = {Numerical Heat Transfer},
 }
 
-@article{clark1986,
-	Author = {J. A. Clark},
-	Title = {Private Communication},
-	Year = {1986},
-	Address = {University of Michigan},
+@article{donald-davies,
+	Author = {Donald Davies},
+	Title = {A Brief History of Cryptography},
+	Year = {1997},
 }
 
 @article{arruda2007,
